영화 삭제 수정